# mir

./: .bzrignore  .clang-format  .cvsignore  .gitignore  .lastcommit  Android.mk  CMakeLists.txt  ChangeLog  FindMirClient.cmake  Makefile  Makefile.am  Makefile.in  NEWS  README  README.ati  README.ati.sgml  README.md  README.r128.sgml  README.sgml  RELEASING  TODO  TODO.txt  acinclude.m4  aclocal.m4  application_switcher.cpp  client-ABI-sha1sums  common-ABI-sha1sums  config.h  config.h.in  config.status  configure  configure.ac  cross-compile-chroot.sh  dbusscreen.cpp  demoShell.qml  demo_shell.cpp  deploy-and-test.sh  diff  display.cpp  display.h  (+56 more)
data/: CMakeLists.txt  ubuntu-platform-api.pc.in  ubuntu-platform-hardware-api.pc.in
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  android_new_device_bringup.md  building_source_for_pc.md  demo_shell_controls.md  mainpage.md
examples/: CMakeLists.txt  animated_cursor_demo_client.c  basic.c  basic_greeter.cpp  basic_server.cpp  buffer_render_target.cpp  composition_bypass.cpp  demo_client.c  demo_client_accelerated.cpp  demo_client_display_config.c  demo_client_unaccelerated.c  eglapp.c  eglapp.h  eglplasma.c  egltriangle.c  fingerpaint.c  flicker.c  glog_logger.cpp  glog_logger.h  image_renderer.cpp  multiwin.c  progressbar.c  render_overlays.cpp  render_surfaces.cpp  scroll.cpp  select_pixel_format.cpp  select_pixel_format.h  server_configuration.cpp  server_example_adorning_compositor.cpp  server_example_adorning_compositor.h  server_example_basic_window_manager.h  server_example_canonical_window_manager.cpp  server_example_canonical_window_manager.h  server_example_input_event_filter.cpp  server_example_input_filter.cpp  stress_server.cpp  test_c_api.cpp  test_haptic_device.cpp  test_location_api.cpp  test_multiple_surfaces_event_delivery.cpp  (+6 more)
examples/demo-inprocess-surface-client/: demo_inprocess_surface_client.cpp  inprocess_egl_client.cpp  inprocess_egl_client.h
examples/demo-shell/: CMakeLists.txt  application_switcher.cpp  cascaded_display_configuration_policy.cpp  cascaded_display_configuration_policy.h  demo_compositor.cpp  demo_compositor.h  demo_renderer.cpp  demo_renderer.h  demo_shell.cpp  fullscreen_placement_strategy.cpp  fullscreen_placement_strategy.h  gl_cursor_renderer.cpp  gl_cursor_renderer.h  software_cursor_compositing_strategy.cpp  software_cursor_compositing_strategy.h  software_cursor_overlay_renderer.cpp  software_cursor_overlay_renderer.h  translucent_outputs.cpp  translucent_outputs.h  window_manager.cpp  window_manager.h
playground/: CMakeLists.txt
playground/demo-shell/: CMakeLists.txt  demo_compositor.cpp  demo_compositor.h  demo_shell.cpp  event_filter.cpp  event_filter.h  fullscreen_placement_strategy.h  fullscreen_wm.cpp  fullscreen_wm.h  window_manager.cpp  window_manager.h
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ati.c  ati.h  ati_pciids_gen.h  atiaccel.c  atiaccel.h  atiadapter.c  atiadapter.h  atiadjust.c  atiadjust.h  atiaudio.c  atiaudio.h  atibank.c  atibank.h  atibus.c  atibus.h  atichip.c  atichip.h  aticlock.c  aticlock.h  aticonfig.c  aticonfig.h  aticonsole.c  aticonsole.h  aticrtc.h  aticursor.c  aticursor.h  atidac.c  atidac.h  atidecoder.c  atidecoder.h  atidga.c  atidga.h  atidri.c  atidri.h  atidripriv.h  (+504 more)
src/.deps/: i810_accel.Plo  i810_cursor.Plo  i810_dga.Plo  i810_dri.Plo  i810_driver.Plo  i810_io.Plo  i810_memory.Plo  i810_video.Plo  i810_wmark.Plo  i830_3d.Plo  i830_accel.Plo  i830_bios.Plo  i830_crt.Plo  i830_cursor.Plo  i830_debug.Plo  i830_display.Plo  i830_dri.Tpo  i830_driver.Plo  i830_dvo.Plo  i830_exa.Plo  i830_i2c.Plo  i830_io.Plo  i830_lvds.Plo  i830_memory.Plo  i830_modes.Plo  i830_quirks.Plo  i830_render.Plo  i830_sdvo.Plo  i830_tv.Plo  i830_video.Plo  i830_xaa.Plo  i915_3d.Plo  i915_render.Plo  i915_video.Plo  i965_render.Plo  i965_video.Plo
src/AtomBios/: CD_Operations.c  Decoder.c
src/android/: CMakeLists.txt  ubuntu_application_api.cpp
src/bios_reader/: .gitignore  Makefile  Makefile.am  Makefile.in  bios_dumper.c  bios_reader.c  swf_dumper.c
src/bridge/: bridge.h  bridge_defs.h  hybris_bridge_defs.h
src/ch7017/: Makefile  Makefile.am  Makefile.in  ch7017.c  ch7017_reg.h
src/ch7xxx/: Makefile  Makefile.am  Makefile.in  ch7xxx.c  ch7xxx.h  ch7xxx_module.c  ch7xxx_reg.h
src/client/: CMakeLists.txt  aging_buffer.h  buffer_stream.cpp  buffer_stream.h  client_buffer.h  client_buffer_depository.cpp  client_buffer_factory.h  client_buffer_stream.h  client_buffer_stream_factory.h  client_platform_factory.h  connection_configuration.h  connection_surface_map.h  cursor_configuration.h  default_client_buffer_stream_factory.cpp  default_client_buffer_stream_factory.h  default_connection_configuration.cpp  default_connection_configuration.h  event_printer.cpp  lifecycle_control.cpp  lifecycle_control.h  mir_basic_rpc_channel.cpp  mir_buffer_stream.cpp  mir_buffer_stream.h  mir_buffer_stream_api.cpp  mir_client_ensure_global_symbol_resolution.cpp  mir_client_library.cpp  mir_client_library.cpp.THIS  mir_connection.cpp  mir_connection.h  mir_connection_api.cpp  mir_connection_api.h  mir_cursor_api.cpp  mir_event_queue.cpp  mir_event_queue.h  mir_prompt_session.cpp  mir_prompt_session_api.cpp  mir_screencast.cpp  mir_screencast.h  mir_screencast_api.cpp  mir_socket_rpc_channel.cpp  (+23 more)
src/common/: CMakeLists.txt  abstractdbusservicemonitor.cpp  abstractdbusservicemonitor.h  debughelpers.cpp  debughelpers.h  executable_path.cpp  symbols.map
src/compositor/: CMakeLists.txt
src/cookie/: CMakeLists.txt  cookie_factory.cpp  (+1 more)
test/: .gitignore  Makefile.am  Makefile.in  basic-copyarea-size.c  basic-copyarea.c  basic-fillrect.c  basic-putimage.c  basic-stress.c  dri2-swap.c  dri2.c  mixed-stress.c  render-composite-solid.c  render-copyarea-size.c  render-copyarea.c  render-fill-copy.c  render-fill.c  render-trapezoid-image.c  render-trapezoid.c  test.h  test_image.c
tests/: CMakeLists.txt  google-mock.pri  test-includes.pri  test_ua_sensors_mock.cpp  test_ua_sensors_real.cpp  test_ubuntu_application_sensors.cpp  tests.pro
(+2828 files in other folders)
